--- a/gift_box/pubspec.yaml
+++ b/gift_box/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   bloc_concurrency: ^0.3.0
 
   # Utils
+  collection: ^1.19.0
   equatable: ^2.0.5
   get_it: ^8.0.0
   logger: ^2.4.0
