--- a/gift_box/pubspec.yaml
+++ b/gift_box/pubspec.yaml
@@ -45,8 +45,8 @@ dev_dependencies:
   # Test
   flutter_test:
     sdk: flutter
+  alchemist: ^0.11.0
   bloc_test: ^10.0.0
-  golden_toolkit: ^0.15.0
   mocktail: ^1.0.4
   test_cov_console: ^0.2.2
 
