--- a/gift_box/analysis_options.yaml
+++ b/gift_box/analysis_options.yaml
@@ -8,3 +8,5 @@ dart_code_linter:
     - missing-test-assertion:
         include-assertions:
           - expectList
+        include-methods:
+          - testBloc
