--- a/gift_box/android/app/src/main/AndroidManifest.xml
+++ b/gift_box/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,19 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <!-- Host Card Emulation Configuration -->
+        <service
+            android:name="dev.huynh.nfc_manager_android.host_card_emulation.HostCardEmulation"
+            android:exported="true"
+            android:permission="android.permission.BIND_NFC_SERVICE">
+            <intent-filter>
+                <action android:name="android.nfc.cardemulation.action.HOST_APDU_SERVICE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.nfc.cardemulation.host_apdu_service"
+                android:resource="@xml/apduservice" />
+        </service>
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
