--- a/gift_box/pubspec.yaml
+++ b/gift_box/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   equatable: ^2.0.5
   get_it: ^8.0.0
   logger: ^2.4.0
+  nfc_manager:
+    git:
+      url: git@github.com:ngoc-quoc-huynh/nfc_manager.git
+      path: nfc_manager
 
 dev_dependencies:
   # Linter
