--- a/gift_box/pubspec.yaml
+++ b/gift_box/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   logger: ^2.4.0
   nfc_manager:
     git:
-      url: git@github.com:ngoc-quoc-huynh/nfc_manager.git
+      url:  https://github.com/ngoc-quoc-huynh/nfc_manager.git
       path: nfc_manager
 
 dev_dependencies:
