--- a/gift_box/.gitignore
+++ b/gift_box/.gitignore
@@ -56,8 +56,10 @@ lib/**/*.i18n.dart
 # Coverage
 /coverage/
 
-# Don't check in golden failure output
+# Ignore non-CI golden files and failures
+test/**/goldens/**/
 test/**/failures/
+!test/**/goldens/ci/
 
 # i18n analyses
 **/i18n/_missing_translations.yaml
