--- a/gift_keys/pubspec.yaml
+++ b/gift_keys/pubspec.yaml
@@ -21,8 +21,12 @@ dependencies:
   flutter_bloc: ^9.0.0
   bloc_concurrency: ^0.3.0
 
+  # UI
+  image_picker: ^1.1.2
+
   # Utils
   equatable: ^2.0.5
+  intl: ^0.19.0
   get_it: ^8.0.0
   logger: ^2.4.0
 
