--- a/gift_keys/pubspec.yaml
+++ b/gift_keys/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   intl: ^0.19.0
   get_it: ^8.0.0
   logger: ^2.4.0
+  nfc_manager:
+    git:
+      url: https://github.com/ngoc-quoc-huynh/nfc_manager.git
+      path: nfc_manager
 
 dev_dependencies:
   # Linter
