--- a/gift_keys/pubspec.yaml
+++ b/gift_keys/pubspec.yaml
@@ -22,11 +22,12 @@ dependencies:
   bloc_concurrency: ^0.3.0
 
   # UI
-  image_picker: ^1.1.2
+  rive: ^0.13.20
 
   # Utils
   collection: ^1.19.1
   equatable: ^2.0.5
+  image_picker: ^1.1.2
   intl: ^0.19.0
   get_it: ^8.0.0
   logger: ^2.4.0
@@ -60,3 +61,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/key.riv
