--- a/gift_keys/pubspec.yaml
+++ b/gift_keys/pubspec.yaml
@@ -13,6 +13,12 @@ dependencies:
   # Localization
   flutter_localizations:
     sdk: flutter
+  intl: ^0.19.0
+
+
+  # Local storage
+  sqlite_async: ^0.11.4
+  sqlite3_flutter_libs: ^0.5.31
 
   # Navigator
   go_router: ^14.2.9
@@ -28,7 +34,6 @@ dependencies:
   collection: ^1.19.1
   equatable: ^2.0.5
   image_picker: ^1.1.2
-  intl: ^0.19.0
   get_it: ^8.0.0
   logger: ^2.4.0
   nfc_manager:
@@ -36,6 +41,8 @@ dependencies:
       url: https://github.com/ngoc-quoc-huynh/nfc_manager.git
       path: nfc_manager
       ref: v1.0.0
+  path: ^1.9.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   # Linter
