--- a/gift_keys/pubspec.yaml
+++ b/gift_keys/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   # Utils
   collection: ^1.19.1
   equatable: ^2.0.5
+  flutter_image_compress: ^2.4.0
   image_picker: ^1.1.2
   get_it: ^8.0.0
   logger: ^2.4.0
