--- a/gift_keys/pubspec.yaml
+++ b/gift_keys/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
       url: https://github.com/ngoc-quoc-huynh/nfc_manager.git
       path: nfc_manager
       ref: v1.0.0
+  package_info_plus: ^8.3.0
   path: ^1.9.1
   path_provider: ^2.1.5
 
