--- a/gift_keys/pubspec.yaml
+++ b/gift_keys/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   package_info_plus: ^8.3.0
   path: ^1.9.1
   path_provider: ^2.1.5
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   # Linter
