Add launcher icon

--- a/gift_keys/Makefile
+++ b/gift_keys/Makefile
@@ -1,4 +1,4 @@
-.PHONY: i18n check-i18n check-code check-files style test test-unit test-ui update-goldens splash-screen
+.PHONY: i18n check-i18n check-code check-files style test test-unit test-ui update-goldens launcher-icon splash-screen
 
 i18n:
 	dart run slang
@@ -32,6 +32,10 @@ test-ui:
 
 update-goldens:
 	flutter test --update-goldens --tags=golden
+
+
+launcher-icon:
+	dart run flutter_launcher_icons --file launcher_icon.yaml
 
 splash-screen:
 	dart run flutter_native_splash:create --path=splash_screen.yaml
