Update Java to version 21

--- a/gift_box/android/app/build.gradle
+++ b/gift_box/android/app/build.gradle
@@ -20,12 +20,12 @@ android {
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.JavaVersion.VERSION_21
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_21
     }
 
     defaultConfig {
