--- a/gift_keys/android/app/build.gradle
+++ b/gift_keys/android/app/build.gradle
@@ -6,9 +6,9 @@ plugins {
 }
 
 def keystoreProperties = new Properties()
-def keystorePropertiesFile = rootProject.file('../.signing/android/keystore.properties')
+def keystorePropertiesFile = rootProject.file('key.properties')
 if (keystorePropertiesFile.exists()) {
-    keystorePropertiesFile.withInputStream { keystoreProperties.load(it) }
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 } else {
     keystoreProperties.setProperty('keystorePath', '__placeholder')
     logger.lifecycle('Could not read keystore.properties file')
@@ -36,10 +36,26 @@ android {
         versionName = flutter.versionName
     }
 
+    signingConfigs {
+        release {
+            keyAlias = keystoreProperties['keyAlias']
+            keyPassword = keystoreProperties['keyPassword']
+            storeFile = file('gift_keys.jks')
+            storePassword = keystoreProperties['storePassword']
+        }
+    }
+
     buildTypes {
         release {
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
+            ndk {
+                //noinspection ChromeOsAbiSupport
+                abiFilters 'arm64-v8a'
+            }
+            minifyEnabled true
+            shrinkResources true
         }
+
         debug {
             signingConfig signingConfigs.debug
         }
