--- a/.github/workflows/gift_box.yaml
+++ b/.github/workflows/gift_box.yaml
@@ -10,6 +10,7 @@ on:
 jobs:
   build:
     runs-on: macos-latest
+    environment: gift_box
 
     defaults:
       run:
@@ -17,6 +18,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        if: github.event_name == 'workflow_dispatch'
+        with:
+          distribution: 'adopt'
+          java-version: '21'
+          cache: 'gradle'
 
       - name: Setup asdf
         uses: asdf-vm/actions/setup@v3
@@ -65,3 +74,30 @@ jobs:
         with:
           name: golden-test-failures
           path: gift_box/test/ui/**/failures
+
+      - name: Generate key.properties file
+        if: github.event_name == 'workflow_dispatch'
+        env:
+          KEY_PROPERTIES_FILE: ./android/key.properties
+        run: |
+          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" > ${{ env.KEY_PROPERTIES_FILE }}
+          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> ${{ env.KEY_PROPERTIES_FILE }}
+          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> ${{ env.KEY_PROPERTIES_FILE }}
+      - name: Generate keystore file
+        if: github.event_name == 'workflow_dispatch'
+        run: echo "${{ secrets.KEYSTORE }}" | base64 --decode > android/app/gift_bpx.jks
+      - name: Build APK
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          flutter build apk \
+            --release \
+            --obfuscate \
+            --split-debug-info=./build/app/outputs/symbols
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        if: github.event_name == 'workflow_dispatch'
+        with:
+          name: Gift Keys APK
+          path: |
+            app/build/app/outputs/apk/release/gift_box_release_v*.apk
+            build/app/outputs/symbols
