--- a/.github/workflows/gift_keys.yaml
+++ b/.github/workflows/gift_keys.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     environment: gift_keys
 
     defaults:
@@ -23,9 +23,12 @@ jobs:
         uses: actions/setup-java@v4
         if: github.event_name == 'workflow_dispatch'
         with:
-          distribution: 'adopt'
-          java-version: '21'
-          cache: 'gradle'
+          distribution: adopt
+          java-version: 21
+          cache: gradle
+          cache-dependency-path: |
+            gift_keys/android/*.gradle*
+            gift_keys/android/**/gradle-wrapper.properties
 
       - name: Setup asdf
         uses: asdf-vm/actions/setup@v3
@@ -99,5 +102,5 @@ jobs:
         with:
           name: Gift Keys APK
           path: |
-            app/build/app/outputs/apk/release/gift_keys_release_v*.apk
-            build/app/outputs/symbols
+            gift_keys/build/app/outputs/apk/release/gift_keys_release_v*.apk
+            gift_keys/build/app/outputs/symbols
