Add golden test for ErrorText

--- a/gift_keys/pubspec.yaml
+++ b/gift_keys/pubspec.yaml
@@ -69,6 +69,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   bloc_test: ^10.0.0
+  meta: ^1.16.0
   mocktail: ^1.0.4
   test_cov_console: ^0.2.2
 
