--- a/gift_box/pubspec.yaml
+++ b/gift_box/pubspec.yaml
@@ -18,8 +18,9 @@ dependencies:
   go_router: ^15.0.0
 
   # State Management
-  flutter_bloc: ^9.0.0
   bloc_concurrency: ^0.3.0
+  flutter_bloc: ^9.0.0
+  hydrated_bloc: ^10.0.0
 
   # UI
   confetti: ^0.8.0
@@ -36,6 +37,7 @@ dependencies:
       url:  https://github.com/ngoc-quoc-huynh/nfc_manager.git
       path: nfc_manager
       ref: v1.0.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   # Linter
