--- a/gift_box/pubspec.yaml
+++ b/gift_box/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
       url: https://github.com/ngoc-quoc-huynh/nfc_manager.git
       path: nfc_manager
       ref: v1.1.0
+  path: ^1.9.1
   path_provider: ^2.1.5
 
 dev_dependencies:
