--- a/gift_box/pubspec.yaml
+++ b/gift_box/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   equatable: ^2.0.5
   get_it: ^9.0.5
   hive_ce: ^2.11.3
+  just_audio: ^0.10.4
   logger: ^2.4.0
   nfc_manager:
     git:
@@ -70,6 +71,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/audios/ada/
     - assets/awesome_shop/
     - assets/images/
     - assets/rive/
