Load assets for music tape and play it

--- a/gift_box/pubspec.yaml
+++ b/gift_box/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
 
   assets:
     - assets/audios/ada/
+    - assets/audios/music_tape/
     - assets/images/carousel/
     - assets/images/shop/
     - assets/rive/
