--- a/gift_box/pubspec.yaml
+++ b/gift_box/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path_provider: ^2.1.5
   stream_transform: ^2.1.1
   url_launcher: ^6.3.1
+  vibration: ^3.1.3
 
 dev_dependencies:
   # Linter
