--- a/gift_box/pubspec.yaml
+++ b/gift_box/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   animated_flip_counter: ^0.3.4
   animated_text_kit: ^4.2.3
   confetti: ^0.8.0
+  dynamic_color: ^1.8.1
   rive: ^0.14.0-dev.6
 
   # Utils
