Add launcher icon to CustomLicensePage

--- a/gift_box/Makefile
+++ b/gift_box/Makefile
@@ -41,6 +41,7 @@ launcher-icon:
 	@$(MAKE) check-color
 	cp assets/skins/launcher_icon/android/$(color).png assets/launcher_icon/android.png
 	cp assets/skins/launcher_icon/ios/$(color).png assets/launcher_icon/ios.png
+	cp assets/skins/launcher_icon/app/$(color).webp assets/images/launcher_icon.webp
 	dart run flutter_launcher_icons --file launcher_icon.yaml
 
 splash-screen:
