--- a/gift_box/pubspec.yaml
+++ b/gift_box/pubspec.yaml
@@ -80,4 +80,5 @@ flutter:
     - assets/audios/music_tape/
     - assets/images/carousel/
     - assets/images/shop/
+    - assets/images/
     - assets/rive/
