--- a/gift_box/pubspec.yaml
+++ b/gift_box/pubspec.yaml
@@ -13,6 +13,11 @@ dependencies:
   # Utils
   get_it: ^9.0.5
   logger: ^2.6.2
+  nfc_manager:
+    git:
+      url: https://github.com/ngoc-quoc-huynh/nfc_manager.git
+      path: nfc_manager
+      ref: v1.1.0
 
 dev_dependencies:
   # Linter
